--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,12 +1,16 @@
 {% extends "main.html" %} {% block content %}
-<h1>This is the home page</h1>
+<h1>This is the home page</h1>  
 <div>
+  <a href= "{% url "create-room" %}"> Create Room </a>
   <div>
     {% for room in rooms %}
-
-    <h2>{{room.id}} -- <a href="room/{{room.id}}">{{room.name}}</a></h2>
-
+    <a href = "{% url "update-room" room.id %}"> Edit </a>
+    <a href = "{% url "delete-room" room.id %}"> Delete </a>
+    <span> @ {{room.host.username}}</span>
+    <h5>{{room.id}} -- <a href="room/{{room.id}}">{{room.name}}</a></h5>
+    <small> {{room.topic.name}} </small>
+    <hr />
     {% endfor %}
   </div>
-</div>
+</div> 
 {% endblock content %}
