--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,16 +1,49 @@
-{% extends "main.html" %} {% block content %}
-<h1>This is the home page</h1>  
-<div>
-  <a href= "{% url "create-room" %}"> Create Room </a>
+{% extends "main.html" %} 
+
+{% block content %}
+
+<style>
+  .home-container {
+    display:grid;
+    grid-template-columns: 1fr 3fr;
+  }
+</style>
+
+<div class='home-container'>
+
   <div>
+    <h3> Browse Topics <h3>
+    <hr>
+    
+    <a href='{% url "home" %}'> All </a>
+    {% for topic in topics %}
+      <div>
+        <a href='{% url "home" %}?q={{topic.name}}'> {{topic.name}} </a>
+      </div>
+    {% endfor %}
+
+  </div>
+
+  
+  
+  <div>
+    <div>
+      <h5> {{room_count}} {{grammar}} Active </h5>
+    </div>
+    <a href= "{% url "create-room" %}"> Create Room </a>
     {% for room in rooms %}
-    <a href = "{% url "update-room" room.id %}"> Edit </a>
-    <a href = "{% url "delete-room" room.id %}"> Delete </a>
-    <span> @ {{room.host.username}}</span>
-    <h5>{{room.id}} -- <a href="room/{{room.id}}">{{room.name}}</a></h5>
-    <small> {{room.topic.name}} </small>
-    <hr />
+    
+    <div>
+      <a href = "{% url "update-room" room.id %}"> Edit </a>
+      <a href = "{% url "delete-room" room.id %}"> Delete </a>
+      <span> @ {{room.host.username}}</span>
+      <h5>{{room.id}} -- <a href="room/{{room.id}}">{{room.name}}</a></h5>
+      <small> {{room.topic.name}} </small>
+      <hr />
+    </div>
+    
     {% endfor %}
   </div>
+
 </div> 
 {% endblock content %}
